--- a/action.yml
+++ b/action.yml
@@ -46,7 +46,7 @@ runs:
         export GUIX_BINARY_FILE_NAME=guix-binary-nightly.x86_64-linux.tar.xz
         sudo --preserve-env=GUIX_BINARY_FILE_NAME -- bash -c 'env --default-signal=PIPE yes | bash guix-install.sh'
       shell: bash
-      name: Install Guix
+      name: Install GuixOK?
     - run: sudo -i guix archive --generate-key
       shell: bash
       name: Generate keys
